fix font, fix header spacing

--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'TheSecret';
-  src: font-url('TheSecret-regular-webfont.eot'),
-  font-url('TheSecret-regular-webfont.eot?#iefix') format('embedded-opentype'),
-  font-url('TheSecret-regular-webfont.woff') format('woff'),
-  font-url('TheSecret-regular-webfont.ttf') format('truetype'),
-  font-url('TheSecret-regular-webfont.svg#TheSecret_regular') format('svg');
+  src: url('/assets/fonts/TheSecret-regular-webfont.eot'),
+  url('/assets/fonts/TheSecret-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('/assets/fonts/TheSecret-regular-webfont.woff') format('woff'),
+  url('/assets/fonts/TheSecret-regular-webfont.ttf') format('truetype'),
+  url('/assets/fonts/TheSecret-regular-webfont.svg#TheSecret_regular') format('svg');
   font-style: normal;
   font-weight: normal;
 }
