--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,9 +1,10 @@
 h1, h2 {
   font-family: 'TheSecret';
+  line-height: 0;
 }
 
 h2 {
-  letter-spacing: .5px;
+  margin-top: 3rem;
 }
 
 h5 {
@@ -13,7 +14,7 @@ h5 {
 .hero-header {
   color: $white;
   text-shadow: 0 2px 6px rgba(0,0,0,.2);
-  margin: 3rem 0 0 0;
+  margin: 13rem 0 0 0;
 }
 
 .small-header, .subheader, .slider-name, .slider-role {
@@ -24,7 +25,7 @@ h5 {
   color: $white;
   text-shadow: 0 2px 6px rgba(0,0,0,.2);
   text-transform: uppercase;
-  margin-top: -1rem;
+  margin: 0 0 1rem;
   font-size: 1.5rem;
 
   @include breakpoint(large down) {
