--- a/src/assets/scss/components/_cruise-information.scss
+++ b/src/assets/scss/components/_cruise-information.scss
@@ -1,6 +1,6 @@
 .cruise-information {
   box-shadow: 0 2px 30px rgba($black, 0.3);
-  color: white;
+  color: $white;
 
   a {
     color: $white;
